# anthropic-performance-takehome-openevolve

./: .env.example  .gitignore  Makefile  README.md  config.yaml  evaluator.py  main.py  pyproject.toml
config/: config-anthropic-sonnet-4-5.yaml  config-gemini-3-pro.yaml  config-gemini.yaml  config-gpt-5-2.yaml  config-lightweight.yaml  config-openai-gpt-5-2.yaml
original_performance_takehome-main-5452f74/: perf_takehome.py
src/: evaluator.py  evolve.py  paths.py  runner.py  utils.py
