[project]
name = "anthropic-performance-takehome-openevolve"
version = "0.1.0"
description = "OpenEvolve optimization for Anthropic Performance Takehome"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openevolve>=0.2.26",
    "python-dotenv>=1.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["openevolve"]

[dependency-groups]
dev = [
    "ruff>=0.14.14",
]
