[project]
name = "anthropic-performance-takehome-openevolve"
version = "0.1.0"
description = "OpenEvolve optimization for Anthropic Performance Takehome"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.0",
    "openevolve>=0.2.26",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "PL",  # Pylint
    "SIM", # flake8-simplify
    "RUF", # Ruff-specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["openevolve"]

[dependency-groups]
dev = [
    "ruff>=0.14.14",
    "ty>=0.0.14",
]
